## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libshapeframework.la

libshapeframework_la_SOURCES =  \
	ArrowBase.cpp \
	AutoLayout.cpp \
	BitmapShape.cpp \
	BitmapShapeXml.cpp \
	CanvasHistory.cpp \
	CanvasState.cpp \
	CircleArrow.cpp \
	CircleShape.cpp \
	CommonFcn.cpp \
	ControlShape.cpp \
	CurveShape.cpp \
	Defs.h \
	DiagramManager.cpp \
	DiagramManager.h \
	DiamondArrow.cpp \
	DiamondShape.cpp \
	EditTextShape.cpp \
	EllipseShape.cpp \
	FixedRectShape.cpp \
	FlexGridShape.cpp \
	GridShape.cpp \
	LineShape.cpp \
	MultiSelRect.cpp \
	OpenArrow.cpp \
	OrthoShape.cpp \
	PolygonShape.cpp \
	PolygonShapeXml.cpp \
	Printout.cpp \
	PropertyIO.h \
	RectShape.cpp \
	RoundOrthoShape.cpp \
	RoundRectShape.cpp \
	SFEvents.cpp \
	ScaledDC.cpp \
	ShapeBase.cpp \
	ShapeBaseXml.cpp \
	ShapeCanvas.cpp \
	ShapeDataObject.cpp \
	ShapeDockpoint.cpp \
	ShapeHandle.cpp \
	SolidArrow.cpp \
	TextShape.cpp \
	TextShapeXml.cpp \
	Thumbnail.cpp \
	XmlSerializer.h \
	wxxmlserializer/Defs.h \
	wxxmlserializer/PropertyIO.cpp \
	wxxmlserializer/PropertyIO.h \
	wxxmlserializer/XmlSerializer.cpp \
	wxxmlserializer/XmlSerializer.h \
	wxsf/ArrowBase.h \
	wxsf/AutoLayout.h \
	wxsf/BitmapShape.h \
	wxsf/CanvasHistory.h \
	wxsf/CanvasState.h \
	wxsf/CircleArrow.h \
	wxsf/CircleShape.h \
	wxsf/CommonFcn.h \
	wxsf/ControlShape.h \
	wxsf/CurveShape.h \
	wxsf/Defs.h \
	wxsf/DiagramManager.h \
	wxsf/DiamondArrow.h \
	wxsf/DiamondShape.h \
	wxsf/EditTextShape.h \
	wxsf/EllipseShape.h \
	wxsf/FixedRectShape.h \
	wxsf/FlexGridShape.h \
	wxsf/GridShape.h \
	wxsf/LineShape.h \
	wxsf/MultiSelRect.h \
	wxsf/OpenArrow.h \
	wxsf/OrthoShape.h \
	wxsf/PolygonShape.h \
	wxsf/Printout.h \
	wxsf/RectShape.h \
	wxsf/RoundOrthoShape.h \
	wxsf/RoundRectShape.h \
	wxsf/SFEvents.h \
	wxsf/ScaledDC.h \
	wxsf/ShapeBase.h \
	wxsf/ShapeCanvas.h \
	wxsf/ShapeDataObject.h \
	wxsf/ShapeDockpoint.h \
	wxsf/ShapeHandle.h \
	wxsf/SolidArrow.h \
	wxsf/TextShape.h \
	wxsf/Thumbnail.h \
	wxsf/wxShapeFramework.h

libshapeframework_la_CXXFLAGS = -I/home/igor/wxWidgets/buildGTK/lib/wx/include/gtk2-unicode-3.1 \
	-I/home/igor/wxWidgets/include \
	-D_FILE_OFFSET_BITS=64 \
	-DWXUSINGDLL \
	-D__WXGTK__ \
	-pthread \
	-DUNICODE \
	-DWXUSINGDLL \
	-DWXUSINGDLL_CL \
	-DWXUSINGDLL_SDK 

libshapeframework_la_LDFLAGS = -L/home/igor/wxWidgets/buildGTK/lib \
	-pthread \
	-Wl,-rpath,/home/igor/wxWidgets/buildGTK/lib \
	-lwx_gtk2u_xrc-3.1 \
	-lwx_gtk2u_html-3.1 \
	-lwx_gtk2u_qa-3.1 \
	-lwx_gtk2u_adv-3.1 \
	-lwx_gtk2u_core-3.1 \
	-lwx_baseu_xml-3.1 \
	-lwx_baseu_net-3.1 \
	-lwx_baseu-3.1 
